--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -996,23 +996,23 @@ unignorefile.description=Datei(en) werden werden wieder verf\u00fcgbar gemacht (
 unignorefile.key=V
 unignorefile.name=Dateien wiedereinschliessen 
 
-##user.dir.contacts=Contacts
-##user.dir.custom=Custom
-##user.dir.desktop=Desktop
-##user.dir.documents=Documents
+user.dir.contacts=Kontakte
+user.dir.custom=Benutzerdefiniert
+user.dir.desktop=Desktop
+user.dir.documents=Dokumente
 ##user.dir.evolution=Evolution
-##user.dir.favorites=Favorites
-##user.dir.links=Links
-##user.dir.music=Music
-##user.dir.my_documents=My Documents
-##user.dir.my_music=My Music
-##user.dir.my_pictures=My Pictures
-##user.dir.my_videos=My Videos
-##user.dir.pictures=Pictures
-##user.dir.recent_documents=Recent Documents
-##user.dir.videos=Videos
+user.dir.favorites=Favoriten
+user.dir.links=Links
+user.dir.music=Musik
+user.dir.my_documents=Eigenen Dokumente
+user.dir.my_music=Meine Musik
+user.dir.my_pictures=Meine Bilder
+user.dir.my_videos=Meine Videos
+user.dir.pictures=Bilder
+user.dir.recent_documents=Zuletzt verwendet
+user.dir.videos=Videos
 
-##winutils.shortcut.description=This shortcut was placed here by PowerFolder
+winutils.shortcut.description=Diese Verknüpfung wurde von PowerFolder erstellt.
 
 wizard.backup_panel.folder_backup_success=Sie haben die automatische Sicherung\nerfolgreich eingerichtet\!
 wizard.backup_panel.pcsjoin=Andere Computer können nun dem Folder beitreten
