Integrate Never Ask dialog with GenericDialog for a consistent look across the application.

--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -258,7 +258,6 @@ filenameproblem.dialog.automatic_rename=Renommage automatique
 filenameproblem.dialog.automatic_rename.explained=Enlever les caract\u00e8res invalides et/ou ajouter "-1" afin d'obtenir un nom de fichier valide
 filenameproblem.dialog.description=Nom de fichier erron\u00e9, proposer une correction pour chaque fichier
 filenameproblem.dialog.do_nothing=Ne rien faire
-filenameproblem.dialog.never_ask_this_again=Ne plus me demander
 filenameproblem.dialog.solution=Solution
 filenameproblem.dialog.title=Probl\u00e8me(s) de fichier d\u00e9tect\u00e9
 filenameproblem.duplicate=Dupliquer le fichier trouv\u00e9 (en modifiant la casse)
@@ -278,10 +277,8 @@ findfriends.description=D\u00e9marrer la recherche de nouveaux amis
 findfriends.key=R
 findfriends.name=Rechercher de nouveaux amis
 
-folder.check_path_length.never_show_again=Ne plus me poser la question
 folder.check_path_length.text=L'association du nom du fichier et de son r\u00e9pertoire fait plus de 255 charact\u00e8res.\nCeci n'est pas recommand\u00e9 car cela risque de ne pas fonctionner sur d'autres versions de Windows.\n\nDossier\: {0}\nFichier\: {1}
 folder.check_path_length.title=Le chemin semble \u00eatre trop long
-folder.check_subdirectory_and_filename_length.never_show_again=Ne plus me poser la question
 folder.check_subdirectory_and_filename_length.text=Le nom du fichier ou du (sous-)r\u00e9pertoire fait plus de 30 charact\u00e8res.\nCeci n'est pas recommand\u00e9 car cela risque de ne pas fonctionner sur Apple/Macintosh ou d'autres syst\u00e8mes.\n\nDossier\: {0}\nFichier\: {1}
 folder.check_subdirectory_and_filename_length.title=Filename or directory name maybe to long
 folder.members.synchronisation_panel.folder_size=Taille du dossier
@@ -388,8 +385,7 @@ folderpanel.settingstab.removebutton.name=Retirer
 folderpanel.settingstab.title=Param\u00e8tres
 folderpanel.settingstab.userecyclebin=Utiliser la corbeille
 
-folderrepository.warnonclose.neveraskagain=Ne plus me poser la question. 
-folderrepository.warnonclose.text=Ces dossiers ne sont pas encore synchronis\u00e9s \:\n\n\n\n{0}\n\n\nConfirmer la sortie?
+folderrepository.warnonclose.next=Ces dossiers ne sont pas encore synchronis\u00e9s \:\n\n\n\n{0}\n\n\nConfirmer la sortie?
 folderrepository.warnonclose.title=Confirmer la sortie ?
 
 freelimitdialog.buypro=D\u00e9couvrez PowerFolder Pro
@@ -460,8 +456,6 @@ general.recyclebin=Poubelle
 general.saturday=Samedi
 general.seconds=Seconde(s)
 general.show=Afficher
-general.show_never_again=Ne plus me montrer ce message
-general.show_never_again.key=N
 general.size=Taille
 general.skip=Passer
 general.sunday=Dimanche
