Updated localized date format for US and UK normal display

--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -439,7 +439,7 @@ general.hours=Hour(s)
 general.inet=Internet
 general.localcopyat=Local copy at
 general.localcopyplace=Choose a place for local copy
-general.localized_date_format=MMMM dd. yyyy
+general.localized_date_format=dd MMMM yyyy
 general.localnet=LAN
 general.member=Member
 general.minutes=Minute(s)
