--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -214,7 +214,7 @@ enablesilentmode.description=Deaktiviert alle aufwendigen Aufgaben, z.B. die Suc
 enablesilentmode.key=s
 enablesilentmode.name=Zum Ruhemodus
 
-estimation.indefinite=unbekannt
+estimation.unknown=unbekannt
 
 filecopier.progressdialog.text=Kopiere Dateien...
 filecopier.progressdialog.title=Kopiervorgang aktiv
