--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -214,7 +214,7 @@ enablesilentmode.description=Disables all heavy tasks, e.g. scanning for changes
 enablesilentmode.key=s
 enablesilentmode.name=Run Silently
 
-estimation.indefinite=indefinite
+estimation.unknown=unknown
 
 filecopier.progressdialog.text=Copy files...
 filecopier.progressdialog.title=Copy files progress
