Incomplete - # 636: Disable Delta sync in LAN http://dev.powerfolder.com/projects/powerfolder/ticket/636
Added configuration options

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -1077,3 +1077,6 @@ wizard.whattodo.mirror_folder=Verzeichnis spiegeln
 wizard.whattodo.openonlinedocumentation=Online Dokumentation \u00f6ffnen
 wizard.whattodo.projectwork=Projekt Synchronisation
 wizard.whattodo.title=Was m\u00f6chten Sie tun?
+
+preferences.dialog.usedeltaonlan=Delta Sync im LAN verwenden 
+preferences.dialog.usedeltaonlan.tooltip=Verwenden Sie diese Einstellung, falls Ihr Computer an ein langsames Netzwerk angeschlossen ist
