#76 - Use NO_SYNC profile for preview folders

--- a/src/etc/Translation_en_GB.properties
+++ b/src/etc/Translation_en_GB.properties
@@ -971,6 +971,7 @@ syncprofile.custom.name=Custom profile
 syncprofile.manualdownload.name=Hosting (Manual download)
 syncprofile.projectwork.name=Project work (Manual sync)
 syncprofile.syncpcs.name=Mirror
+syncprofile.no_sync.name=No synchronisation
 
 systemservice.options.info1=Use these options install/uninstall
 systemservice.options.info2=PowerFolder as system service.
